<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sliding Messaging</string>
    <string name="app_name_in_app">Messaging</string>
    <string name="menu_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="type_message">Type message</string>
    <string name="chars">1/160</string>
    <string name="placeholder">Placeholder</string>
    <string name="contact_entry">To</string>
    <string name="about">Created by Jacob Klinker</string>
    <string name="menu_new_message">New Message</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Check to enable dark theme</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_summary">Choose text size of messages</string>
    <string name="text_size2_summary">Choose text size of conversations</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Check to enable notifications</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_summary">Select ringtone</string>
    <string name="page_or_menu">Sliding Menu Mode</string>
    <string name="page_or_menu_summary">Select method of getting to conversation list/new message</string>
    <string name="theme">Theme Settings</string>
    <string name="dark_theme_quick_reply">Quick Reply Dark Theme</string>
    <string name="dark_theme_quick_reply_summary">Check to enable dark theme on quick reply</string>
    <string name="menu_about">About</string>
    <string name="delete_message">Do you want to delete this message?</string>
    <string name="delete_messages">Do you want to delete these messages?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart_1">After changing the theme, application must be restarted</string>
    <string name="restart_2">Restart Sliding Messaging</string>
    <string name="title_color">Title Bar Color</string>
    <string name="title_color_summary">Choose the title bar color (also applies to line above messages when pitch black theme is on and title bar disabled)</string>
    <string name="delivery_reports">Delivery Reports</string>
    <string name="popup_reply">Popup Reply</string>
    <string name="popup_reply_summary">Adds a quick reply that automatically appears when new message received</string>
    <string name="text_saved">Text saved to clipboard</string>
    <string name="draft_saved">Draft saved to clipboard</string>
    <string name="hour_format">24 Hour Timestamp</string>
    <string name="hide_title_bar">Show Title Bar</string>
    <string name="hide_title_bar_summary">Check to show the title bar</string>
    <string name="strip_unicode">Strip Unicode</string>
    <string name="strip_unicode_summary">Substitute GSM compatible character for all characters not supported in 160 character SMS messages</string>
    <string name="other">Other Settings</string>
    <string name="ok">OK</string>
    <string name="emoji">Enable Emojis</string>
    <string name="donate">Pro Version</string>
    <string name="donate_summary">Get tons more features and much more frequent updates</string>
    <string name="load_messages">Messages to Load</string>
    <string name="load_messages_summary">Select the number of messages to be initially loaded</string>
    <string name="load_all">Load All Conversations</string>
    <string name="limit_messages">Limit Messages</string>
    <string name="limit_messages_summary">Limits the amount of messages initially loaded</string>
    <string name="pull_to_refresh">Pull to Load All Messages</string>
    <string name="vibrate">Vibrate on Notification</string>
    <string name="override">Override Stock Messaging</string>
    <string name="override_summary">Will save message to inbox and abort broadcast to other texting apps, stopping notifications. May stop Light Flow notifications</string>
	<string name="open_contact_menu">Open Contact List at Startup</string>
	<string name="open_contact_menu_summary">Opens the left side menu at app startup</string>
	<string name="contact_pictures">Display Contact Pictures</string>
	<string name="date_format">Date Format</string>
	<string name="date_format_summary">Select how date should be formatted</string>
	<string name="secure_notification">Secure Notifications</string>
	<string name="secure_notification_summary">Sender and message text will not be displayed in notification</string>
	<string name="enable_view_conversation">Enable Popup Expanded Options</string>
	<string name="enable_view_conversation_summary">Shows the view conversation and delete buttons at the bottom of the quick reply dialog</string>
	<string name="enable_mms">Enable MMS</string>
	<string name="mobile_only">Mobile Numbers Only</string>
	<string name="mobile_only_summary">Display only mobile numbers when searching through contacts for new message</string>
	<string name="led_color">LED Color</string>
	<string name="led_color_summary">Choose flashing LED color</string>
	<string name="vibrate_pattern">Vibrate Pattern</string>
	<string name="vibrate_pattern_summary">Choose vibrating pattern with new notification</string>
	<string name="menu_call">Call Contact</string>
	<string name="keyboard_type">Smiley Button</string>
	<string name="keyboard_type_summary">Show the smiley button on the keyboard</string>
	<string name="override_lang">Override System Language</string>
	<string name="override_lang_summary">Sets language to English</string>
	<string name="save_image">Image Saved</string>
	<string name="wake_screen">Wake Screen</string>
	<string name="wake_screen_summary">Wakes screen when new notification arrives</string>
	<string name="unlock_screen">Unlock Device</string>
	<string name="unlock_screen_summary">Unlocks the device when new notification arrives (does not work when using the SlideOver popup)</string>
	<string name="signature">Select Signature</string>
	<string name="smilies">Smilies to be Displayed</string>
	<string name="smilies_summary">Selected how smilies should be displayed</string>
	<string name="send_to">Send To</string>
	<string name="button_options">Notification Buttons</string>
	<string name="button_options_summary">Select buttons to be displayed on notification (Max of 3 can be displayed on most phones)</string>
	<string name="slide_messages">Slide Messages off Screen</string>
	<string name="slide_messages_summary">Enable to slide messages all the way off of the screen when opening conversations menu</string>
	<string name="disable_sliding">Disable Sliding Menus</string>
	<string name="disable_sliding_summary">Disables sliding menus on left and right, can instead be opened using buttons on top of screen</string>
	<string name="show_keyboard">Hide Keyboard</string>
	<string name="show_keyboard_summary">Automatically hides the keyboard once you have sent a message</string>
	<string name="notification_icon">Notification Icon Color</string>
	<string name="new_message">New Message</string>
	<string name="title_caps">Title Bar Capital Letters</string>
	<string name="title_caps_summary">If checked, displays title bar name in all capital letters</string>
    <string name="advanced_theme">Advanced Theme Settings</string>
    <string name="advanced_notifications">Advanced Notifications Settings</string>
    <string name="advanced_other">Other Advanced Settings</string>
	<string name="advanced_settings">Advanced Settings</string>
    <string name="title_bar_settings">Title Bar Settings</string>
    <string name="title_contact_image">Action Bar Contact Images</string>
    <string name="title_contact_image_summary">Shows the current conversation\'s contact picture on the Action Bar</string>
    <string name="pitch_black_theme">Pitch Black Theme</string>
    <string name="custom_background">Custom Background for Menus</string>
    <string name="custom_background_summary">Choose a custom background to apply to the sliding menus</string>
    <string name="custom_background2">Custom Background for Messages</string>
    <string name="custom_background2_summary">Choose a custom background to apply to the messages</string>
    <string name="menu_delete">Delete all conversations</string>
    <string name="delete_all">WARNING: This will delete ALL messages in ALL conversations.\n\nDo you want to continue deleting all conversations?</string>
    <string name="text_settings">Message Settings</string>
    <string name="sent_text_color">Sent Message Text Color</string>
    <string name="sent_text_color_summary">Choose a color to set as the sent message color</string>
    <string name="received_text_color">Received Message Text Color</string>
    <string name="received_text_color_summary">Choose a color to set as the received message color</string>
    <string name="menu_text_color">Summary Text Color</string>
    <string name="menu_text_color_summary">Choose a color to set as the message summary text color</string>
    <string name="text_opacity">Message Opacity</string>
    <string name="text_opacity_summary">Set the opacity of messages (allows for custom background to be viewed behind them)</string>
    <string name="conversation">Conversation</string>
    <string name="version">Version</string>
	<string name="ct_custom_font">Custom Font</string>
	<string name="ct_contact_name">Contact Name</string>
	<string name="ct_sent_message">Sent message text here.</string>
	<string name="ct_sent_date">Date</string>
	<string name="ct_received_message">Received message text here.</string>
	<string name="ct_received_date">Date</string>
	<string name="menu_edit_theme">Edit Theme</string>
	<string name="menu_delete_theme">Delete Theme</string>
	<string name="menu_get_more_themes">Get More Themes</string>
	<string name="menu_instructions">Help</string>
	<string name="menu_add_theme">Add Theme</string>
	<string name="popup_help1">Get the theme editor here:</string>
	<string name="popup_link"><a href="market://details?id=com.klinker.android.messaging_theme">Play Store</a></string>
	<string name="popup_help2">- You have 2 options:</string>
	<string name="popup_help3">1) Select a preset theme (you can edit this theme by going to Menu -> Edit Theme)</string>
	<string name="popup_help4">2) Select Menu -> Add Theme and create a new theme by editing those values</string>
	<string name="popup_help5">- The delete option will delete the current preview (as long as it isn\'t a default theme)</string>
	<string name="popup_help6">-To get more themes, go to Menu -> Get More Themes</string>
	<string name="popup_help7">-To set a custom font (applies to all themes) go to Menu -> Custom Font</string>
	<string name="popup_help8">Please Note: if you select any theme other than one of the first three (Light, Dark, or Pitch Black), these themes will override any other theme settings you have set</string>
	<string name="popup_help9">Pro users will be able to apply and use any theme you download, but to edit and add themes, you must download the Theme Engine</string>
	<string name="delete">Delete</string>
    <string name="changelog">Change Log</string>
    <string name="developer_tips">Developer Tips</string>
    <string name="initial_how_to">Initial How-To</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_summary">If you can\'t find what you are looking for in any of the sections above, email us before giving a one star review. It never hurts to ask for help!</string>
    <string name="google_plus_page">Google Plus Community</string>
    <string name="xda_thread">XDA Developers Thread</string>
    <string name="select_all">Select All</string>
    <string name="voice_tutorial">Run Google Voice Tutorial</string>
    <string name="voice_tutorial_summary">Only will work if you have an account selected for Google Voice.</string>
    <string name="website">Website</string>
</resources>