<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_edit_theme" android:title="@string/menu_edit_theme" android:showAsAction="never" android:orderInCategory="1"></item>
    <item android:id="@+id/menu_delete_theme" android:showAsAction="never" android:title="@string/menu_delete_theme" android:orderInCategory="2"></item>
    <item android:id="@+id/menu_get_more_themes" android:orderInCategory="6" android:title="@string/menu_get_more_themes" android:showAsAction="never"></item>
    <item android:id="@+id/menu_custom_font" android:orderInCategory="4" android:title="@string/ct_custom_font" android:showAsAction="never"></item>
	<item android:id="@+id/menu_instructions" android:orderInCategory="5" android:title="@string/menu_instructions" android:showAsAction="never"></item>
	<item android:id="@+id/menu_add_theme" android:orderInCategory="0" android:title="@string/menu_add_theme"></item>
    
</menu>