<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/mmsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_help1"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/popup_link"
                android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp"
		        android:text="@string/popup_help2"
		        android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="20dp"
		        android:paddingTop="5dp"
		        android:text="@string/popup_help3"
		        android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="20dp"
		        android:paddingTop="5dp"
		        android:text="@string/popup_help4"
		        android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp"
		        android:text="@string/popup_help5"
		        android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		    <TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp"
		        android:text="@string/popup_help6"
		        android:textAppearance="?android:attr/textAppearanceMedium"/>
		
		    <TextView
		        android:id="@+id/textView7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp"
		        android:text="@string/popup_help7"
		        android:textAppearance="?android:attr/textAppearanceMedium"/>

		    <TextView
		        android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/popup_help8"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
		    
		    <TextView
		        android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/popup_help9"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
    
        </LinearLayout>
    </ScrollView>