<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/placeholder"
    android:orientation="vertical"
        >

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_alignParentTop="true"
        android:cacheColorHint="@color/card_message_list_back"
        android:divider="@null"
        android:fadingEdgeLength="0dp"
        android:requiresFadingEdge="vertical"
        android:listSelector="@android:color/transparent">

    </ListView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
                android:id="@+id/doneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />

        <Button
                android:id="@+id/selectAllButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_all" />

        </LinearLayout>




</RelativeLayout>