<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:id="@+id/sentBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/contactEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/contactEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/contact_entry"
        android:textCursorDrawable="@null">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/contactEntry"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/contactSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_alignParentLeft="true">

        <ImageButton
                android:id="@+id/display_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/dark_send_button"
                android:contentDescription="@string/emoji"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:src="@drawable/emo_im_smirk"
                android:layout_alignBottom="@+id/sendButton"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"/>

        <EditText
                android:id="@+id/messageEntry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_message"
                android:inputType="textCapSentences|textMultiLine|textShortMessage"
                android:maxLines="5"
                android:minHeight="50dp"
                android:minLines="2"
                android:textSize="@dimen/type_message"
                android:textCursorDrawable="@null"
                android:tag="phone"
                android:layout_toLeftOf="@+id/sendButton"
                android:layout_toRightOf="@+id/voiceButton">
            <requestFocus/>
        </EditText>

        <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/send_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_send_black"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:scaleType="fitCenter"
                android:layout_alignBottom="@+id/messageEntry2"/>

        <TextView
                android:id="@+id/charsRemaining2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chars"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/chars_remaining"
                android:layout_alignBottom="@+id/sendButton"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_alignLeft="@+id/sendButton"/>

        <ImageButton
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:id="@+id/voiceButton"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/display_emoji"
                android:layout_alignBottom="@+id/display_emoji"
                android:background="@drawable/dark_send_button"
                android:src="@drawable/voice_enabled"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:alpha=".5"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
    </RelativeLayout>

</RelativeLayout>